Fix overflow of text on plains level

--- a/src/css/_stage_plains.scss
+++ b/src/css/_stage_plains.scss
@@ -151,7 +151,7 @@ $grid-container-border: 0.2rem solid black;
     #plains-narrative-text {
         position: absolute;
         top: $container-padding;
-        bottom: 40%;
+        bottom: 46%;
         left: 69.6%;
         right: $container-padding;
         display: flex;
